--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 
 <!DOCTYPE html>
-<html lang="ro">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MoonPromo Overlay</title>
-    <style>
-        body {
-            margin: 0;
-            background: url('background_final.png') no-repeat center center fixed;
-            background-size: cover;
-            font-family: Arial, sans-serif;
-            color: white;
-        }
-    </style>
+    <title>TikTok Live Overlay</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="overlay">
+        <div class="header">
+            <h1>🚀 MoonPromo LIVE</h1>
+        </div>
+        <div class="stats">
+            <div id="followers">Followers: 0</div>
+            <div id="top-gifter">Top Gifter: --</div>
+        </div>
+        <div class="chat" id="chat-box">
+            <!-- Mesajele din chat vor apărea aici -->
+        </div>
+        <div class="footer">
+            <p>🔥 Racheta pornește la 10 gifts!</p>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
